# parallel-tsp

./: README.org  meson.build  mpi-vtune.sh  mpi.sh  omp-vtune.sh  omp.sh  serial.sh
data/: bayg29.data  bays29.data  dantzig42.data  fri26.data  gr120.data  gr17.data  gr21.data  gr24.data  gr48.data  hk48.data  swiss42.data
src/: BBSolver.cpp  BBSolver.hpp  Matrix.cpp  Matrix.hpp  fri26.h  gr120.h  gr17.h  gr21.h  gr48.h  main-mpi.cpp  main.cpp  meson.build  tspSolver.hpp
